--- a/package.json
+++ b/package.json
@@ -2,16 +2,33 @@
   "name": "sacco-test",
   "version": "1.0.0",
   "description": "A cool savings and loan application for SACCO members.",
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "author": "Michael Rhema",
   "repository": {
     "url": "https://github.com/k0d3d/sacco-online.git"
+  },
+  "scripts": {
+    "test": "jest"
   },
   "readme": "readme.md",
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
-    "prisma-client-lib": "^1.34.8"
+    "@types/jest": "^24.0.18",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.7.11",
+    "jest": "^24.9.0",
+    "prisma-client-lib": "^1.34.8",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0"
+  },
+  "dependencies": {
+    "@types/supertest": "^2.0.8",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.3"
   }
 }
