--- a/package.json
+++ b/package.json
@@ -16,17 +16,25 @@
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^24.0.0",
+    "@types/mongoose": "^5.5.19",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.11",
-    "jest": "^24.9.0",
+    "faker": "^4.1.0",
+    "inversify": "^5.0.1",
+    "jest": "^24.0.0",
     "prisma-client-lib": "^1.34.8",
+    "reflect-metadata": "^0.1.13",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0"
+    "ts-jest": "^24.0.0",
+    "tslint": "^5.20.0",
+    "tslint-config-security": "^1.16.0"
   },
   "dependencies": {
     "@types/supertest": "^2.0.8",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
